--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "showdown": "^1.8.6",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
