--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "markdown": "^0.5.0",
+    "marked": "^0.3.19",
     "showdown": "^1.8.6",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
