--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "html-loader": "^0.5.5",
     "markdown": "^0.5.0",
+    "markdown-loader": "^2.0.2",
     "marked": "^0.3.19",
     "showdown": "^1.8.6",
     "vue": "^2.5.13",
