--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "highlight": "^0.2.4",
+    "highlight.js": "^9.12.0",
     "html-loader": "^0.5.5",
     "markdown": "^0.5.0",
     "markdown-loader": "^2.0.2",
